--- a/react/package.json
+++ b/react/package.json
@@ -17,6 +17,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
